fix: Dark mode unfocused

--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -90,6 +90,10 @@ row:selected .message-action{
   padding: 1px;
 }
 
+.messages-listbox {
+  background-color: @theme_base_color;
+}
+
 
 
 /* Meowgram Window */
